# py_agent

./: .gitignore  MANIFEST.in  README.md  README_EN.md  agent.py  config.py  conversation_memory.json  conversation_saver.py  main.py  pyproject.toml  requirements.txt  setup.py  system_prompt.json  token_counter.py  tools.py  utils.py
.github/workflows/: build.yml
config/: allowed_directories.json  provider_config.json  system_prompt.json  system_prompt.txt  word_count.json
doc/: 项目开发文档.md
frontends/: base.py  commandline.py  commandline_input.py
pyagent/: __init__.py  __main__.py  agent.py  config.py  context_compressor.py  conversation_manager.py  conversation_saver.py  llm_adapter.py  main.py  sdk_factory.py  token_counter.py
pyagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pyagent/config/: provider_config.json  system_prompt.txt
pyagent/frontends/: __init__.py  commandline.py  commandline_input.py  image_handler.py
pyagent/llm_adapter/: __init__.py  anthropic_adapter.py  base.py  client.py  converters.py  exceptions.py  factory.py  models.py  openai_adapter.py  utils.py
pyagent/tools/: __init__.py  browser_manager.py  cmdline.py  directory_list.py  edit.py  file_op.py  file_write.py  handoff.py  image_tools.py  read_file.py  sqlite_query.py  sub_agents.py  web_browser.py  web_fetch.py
pyagent/viewer/: app.py  run.py
pyagent/viewer/static/: session.css  session.js  session_new.css  session_new.js
pyagent/viewer/templates/: session.html
test/: test_cmdline.py  test_file_op.py
tests/: test_cmdline.py  test_edit.py  test_file_write.py  test_llm_adapter.py  test_read_file.py  test_stream_handler.py  test_token_counter.py
tools/: __init__.py  cmdline.py  code_context.py  file_op.py
